# ghostsignal

./: .gitignore  Makefile  Makefile.in  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  configure~
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
data/: quote.txt
src/: Makefile  Makefile.am  Makefile.in  binary_rain.c  binary_rain.h  ghostsignal  ghostsignal.c  gl_loader.c  gl_loader.h  glitch_shader.c  glitch_shader.h  radar_renderer.c  radar_renderer.h  silhouette.c  silhouette.h  text_renderer.c  text_renderer.h  util.c  util.h
src/.deps/: ghostsignal-binary_rain.Po  ghostsignal-ghostsignal.Po  ghostsignal-gl_loader.Po  ghostsignal-glitch_shader.Po  ghostsignal-radar_renderer.Po  ghostsignal-util.Po
src/shaders/: beam.frag  beam.vert  glitch.frag  glitch.vert  rain.frag  text.frag  text.vert
